[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ssDB"
description = "Python package to use Google Sheets like RDB"
readme = "README.md"
requires-python = ">=3.10"
version = "0.2.1"
dependencies = [
    "gspread",
    "PyYAML",
    "typing_extensions",
    "python-dateutil",
]

[tool.setuptools.packages.find]
exclude = ["build", "tests"]